syntax = "proto3";

package autokitteh.apply.v1;

import "buf/validate/validate.proto";

message ApplyRequest {
  string manifest = 1 [(buf.validate.field).string.min_len = 1];
  string path = 2 [(buf.validate.field).string.min_len = 1];
  string project_name = 3;
  string org_id = 4;
}

message Effect {
  string subject_id = 1;
  string type = 2;
  string text = 3;
}

message ApplyResponse {
  repeated string logs = 1;
  repeated string project_ids = 2; // to be retired.
  repeated Effect effects = 3;
}

service ApplyService {
  rpc Apply(ApplyRequest) returns (ApplyResponse);
}
